src/docs/shared/release-notes/5.25.0/upgrade-guide.mdx
---
title: Upgrade from 5.24.0 to 5.25.0
description: Learn how to upgrade Webiny from 5.24.0 to 5.25.0.
---

import { Alert } from "@/components/Alert";

<Alert type="success" title="What you’ll learn">

- how to upgrade Webiny from 5.24.0 to 5.25.0

</Alert>

<Alert type="info">

Make sure to check out the [5.25.0 changelog](./changelog) to get familiar with the changes introduced in this release.

</Alert>

## 1. Upgrade Webiny Packages

Upgrade all `@webiny/*` packages by running the following command:

```bash
yarn up "@webiny/*@5.25.0"
```

Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.25.0`.

<Alert type="info">

Before moving on, make sure you commit all your changes.

</Alert>

## 2. Run the Upgrade Command

The next step is to run the project upgrade:

```bash
yarn webiny upgrade
```

## 3. Deploy Your Project

Proceed by re-deploying your Webiny project:

```bash
# Execute in your project root.
yarn webiny deploy --env {environment}
```

<Alert type="warning">

As stated in the [Upgrade Webiny](../upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.

</Alert>

<Alert type="info">

Learn more about different deployment environments in the [CI/CD / Environments](../../core-development-concepts/ci-cd/environments) key topic.

</Alert>
